Labels as inline blocks fixes wrapping in Firefox.

--- a/themes/bootstrap3/less/bootstrap.less
+++ b/themes/bootstrap3/less/bootstrap.less
@@ -57,6 +57,7 @@ img { max-width: 100%; }
   margin-top: .5rem;
   margin-bottom: .5rem;
 }
+.label { display: inline-block; }
 .popover { width: 250px; }
 .resulthead { .clearfix(); }
 .sub-breadcrumb {
